# homeassistant-orvibo-mqtt

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  Pipfile  README.md  config.json  config.yaml.dist  daemon.py  ir_teacher.sh  pyproject.toml  repository.json  requirements.txt  template.service
.github/workflows/: codeql-analysis.yml
data/: fan_auto.ir  fan_high.ir  fan_low.ir  fan_max.ir  fan_mid.ir  mode_auto.ir  mode_cool.ir  mode_dry.ir  mode_fan.ir  mode_heat.ir  off.ir  on.ir  run.sh  swing_off.ir  swing_on.ir  t18.ir  t19.ir  t20.ir  t21.ir  t22.ir  t23.ir  t24.ir  t25.ir  t26.ir  t27.ir  t28.ir  t29.ir  t30.ir
data/homeassistant_orvibo_mqtt/: device_zoo.py
data/homeassistant_orvibo_mqtt/devices/: __init__.py  abstract_device.py  device_climate.py
etc/: lg_ac_irda.xml
homeassistant_orvibo_mqtt/: device_zoo.py
homeassistant_orvibo_mqtt/devices/: abstract_device.py  device_climate.py  device_socket.py  ir_mapping.xml
rootfs/usr/etc/: daemon_config.json.dist
rootfs/usr/etc/services.d/orvibo-mqtt-daemon/: finish  run
rootfs/usr/lib/: orvibo_mqtt_daemon.py
rootfs/usr/lib/orvibo_mqtt/: device_zoo.py
rootfs/usr/lib/orvibo_mqtt/devices/: abstract_device.py  device_climate.py  device_socket.py
rootfs/usr/share/: lg_ac_irda.xml
scripts/: build_ac_irda_xml.sh  run.sh  run_local.sh
src/: main.py
src/orvibo_mqtt/: device_zoo.py
src/orvibo_mqtt/devices/: abstract_device.py  device_climate.py  device_socket.py
src/orvibo_mqtt/devices/commands/: __init__.py  abstract_commands.py  climate_commands.py
(+2 files in other folders)
